hero section commit

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Web Page</title>
 </head>
+
 <body>
     <header>
         <!--Nav bar-->
@@ -34,8 +35,28 @@
 
     <!-- Hero Section -->
     <section class="hero-section">
-
+        <div class="grid-container">
+            <div class="header-text">
+                <h1>Combine <span class="highlighted">fine</span> images</h1>
+                <p>To represent a product</p>
+            </div>
+            <div class="text" id="div1">
+                <p class="top-text">Use mixed grid with imagery, replace with your own photos and descriptions</p>
+            </div>
+            <div class="image" id="div2"><img src="assets/images/image1.jpg" alt="Image 1"></div>
+            <div class="button" id="div3"><button>Learn more</button></div>
+            <div class="image" id="div4"><img src="assets/images/image2.jpg" alt="Image 2"></div>
+            <div class="image" id="div5"><img src="assets/images/image3.jpg" alt="Image 3"></div>
+            <div class="image" id="div6"><img src="assets/images/image4.jpg" alt="Image 4"></div>
+            <div class="image" id="div7"><img src="assets/images/image5.jpg" alt="Image 5"></div>
+            <div class="image" id="div8"><img src="assets/images/image6.jpg" alt="Image 6"></div>
+            <div class="image" id="div9"><img src="assets/images/image7.jpg" alt="Image 7"></div>
+            <div class="text" id="div10">
+                <p class="bottom-text">This is multipurpose grid, it fits for portfolio, services or agency web site</p>
+            </div>
+        </div>
     </section>
+
 
     <!--Info section-->
     <div class="info-section">
@@ -199,7 +220,6 @@
     </footer>
 
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/footer.js"></script>
 </body>
 
 </html>
